--- a/SpaceWars/WebContent/WEB-INF/web.xml
+++ b/SpaceWars/WebContent/WEB-INF/web.xml
@@ -9,4 +9,12 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+  	<servlet-name>SpaceWarsLogin</servlet-name>
+  	<servlet-class>web.Login</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>SpaceWarsLogin</servlet-name>
+  	<url-pattern>/login</url-pattern>
+  </servlet-mapping>
 </web-app>
